--- a/frontend_00100_simple_html/exercise_00100_my_fakebook.html
+++ b/frontend_00100_simple_html/exercise_00100_my_fakebook.html
@@ -22,15 +22,15 @@
     <li>Über mich</li>
 </ul>
 
-    <img src="./img/Kinder_Apfelchips.png" width="250px" height="250x" class="image">
+    <img src="./img/Kinder_Apfelchips.png" class="image">
 
 <p id="red">
-    Hier steht ein Text im Paragraph den ich jetzt noch formatieren kann.
+    Hier steht ein Text im Paragraph mit hover-Effekt.
 </p>
 
 <p id="blue">Hier ist der blaue Text</p>
 
-<table rules="all" frame="box">
+<table rules="all" frame="box" id="hover">
     <tr>
         <th class="thead">Monat</th>
         <th class="thead">Aktivität</th>
@@ -59,6 +59,7 @@
     </form>
 </br>
 
+<img src="./img/kitten.jpg" class="image">
 
 <a href="https://www.smartninja.at/" target="_blank">
         <img border="0" alt="Blume" src= "Blume.jpg" width="100px" height="100px">
